apps/codellama/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ollama.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama
            port:
              number: 11434
